// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`splitOnHeader splitOnHeader false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b24 <http://www.vault/age> \\"37\\", \\"42\\" ;
	<http://www.vault/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

"
`;

exports[`splitOnHeader splitOnHeader true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b25 dot:contains [
		dot:contains [
			<http://www.vault/age> \\"37\\" ;
			<http://www.vault/name> \\"Alice\\" ;
		], [
			<http://www.vault/age> \\"42\\" ;
			<http://www.vault/name> \\"Bob\\" ;
		], [
			<http://www.vault/name> \\"Charlie\\" ;
		] ;
	] .

"
`;

exports[`splitOnHeader splitOnHeader true addLabels true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b34 dot:contains [
		schema:name \\"People\\" ;
		dot:contains [
			schema:name \\"Alice\\" ;
			<http://www.vault/age> \\"37\\" ;
			<http://www.vault/name> \\"Alice\\" ;
		], [
			schema:name \\"Bob\\" ;
			<http://www.vault/age> \\"42\\" ;
			<http://www.vault/name> \\"Bob\\" ;
		], [
			schema:name \\"Charlie\\" ;
			<http://www.vault/name> \\"Charlie\\" ;
		] ;
	] .

"
`;

exports[`splitOnId splitOnId false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b22 <foaf:knows> [
		rdf:type dot:Wikilink ;
	], [
		rdf:type dot:Wikilink ;
	] .

"
`;

exports[`splitOnId splitOnId true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b23 dot:contains <b23/alice>, <b23/alison> .

<b23/alice> <foaf:knows> [
		rdf:type dot:Wikilink ;
	] .

<b23/alison> <foaf:knows> [
		rdf:type dot:Wikilink ;
	] .

"
`;

exports[`splitOnId splitOnId true addLabels true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<b27/alice> schema:name \\"Alice\\" ;
	<foaf:knows> [
		schema:name \\"Alison\\" ;
		rdf:type dot:Wikilink ;
	] .

_:b27 dot:contains <b27/alice>, <b27/alison> .

<b27/alison> schema:name \\"Alison\\" ;
	<foaf:knows> [
		schema:name \\"Alice\\" ;
		rdf:type dot:Wikilink ;
	] .

"
`;

exports[`splitOnTag splitOnTag false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b18 <http://www.vault/age> \\"37\\", \\"42\\" ;
	dot:tag \\"person\\" ;
	<http://www.vault/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

"
`;

exports[`splitOnTag splitOnTag true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b19 dot:contains [
		<http://www.vault/age> \\"37\\" ;
		dot:tag \\"person\\" ;
		<http://www.vault/name> \\"Alice\\" ;
	], [
		<http://www.vault/age> \\"42\\" ;
		dot:tag \\"person\\" ;
		<http://www.vault/name> \\"Bob\\" ;
	] ;
	<http://www.vault/name> \\"Charlie\\" .

"
`;

exports[`splitOnTag splitOnTag true addLabels true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b22 dot:contains [
		schema:name \\"Alice\\" ;
		<http://www.vault/age> \\"37\\" ;
		dot:tag \\"person\\" ;
		<http://www.vault/name> \\"Alice\\" ;
	], [
		schema:name \\"Bob\\" ;
		<http://www.vault/age> \\"42\\" ;
		dot:tag \\"person\\" ;
		<http://www.vault/name> \\"Bob\\" ;
	] ;
	<http://www.vault/name> \\"Charlie\\" .

"
`;

exports[`toRDF BlockIds 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b4 dot:contains <b4/1>, <b4/2>, <b4/3> ;
	<http://www.vault/description> \\"Section 4\\" ;
	dot:tag \\"Section\\" .

<b4/1> <http://www.vault/description> \\"Section 1\\" ;
	dot:related <Bob\\\\u0020Details/2> .

<b4/2> <http://www.vault/description> \\"Section 2\\" ;
	dot:related <Bob\\\\u0020Details/3\\\\u0020> .

<b4/3> <http://www.vault/description> \\"Section 3\\" ;
	dot:related <Unknown/1> .

"
`;

exports[`toRDF Inline fields 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b10 <http://www.vault/inline> \\"field\\" ;
	<http://www.vault/thoughts> \\"It was decent.\\" ;
	<http://www.vault/rating> \\"6'\\" ;
	<http://www.vault/subject> [
		<http://www.vault/inline> \\"field\\" ;
	], [
		<http://www.vault/inline> \\"field\\" ;
	], [
		<http://www.vault/thoughts> \\"It was decent.\\" ;
	], [
		<http://www.vault/rating> \\"6\\" ;
	] ;
	<http://www.vault/too> [
		<http://www.vault/many> [
			<http://www.vault/inline> \\"fields\\" ;
		] ;
	] ;
	dot:undefined [
		<foaf:knows> _:Alice ;
	] ;
	dot:related _:Alice, [
		rdf:type dot:Wikilink ;
	] .

_:Alice a dot:Wikilink .

"
`;

exports[`toRDF Links 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b2 dot:related <http://www.vault/../houses/img.png>, [
		rdf:type dot:Wikilink ;
	], <http://www.vault/link%201>, <http://www.vault/link%201.md>, <http://example.com>, [
		rdf:type dot:Wikilink ;
	], <http://www.vault/protocol>, <https://example2.com> .

"
`;

exports[`toRDF Outline 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;

exports[`toRDF People 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b5 <http://www.vault/number> \\"42\\" ;
	<http://www.vault/age> \\"42\\", \\"56\\" .

"
`;

exports[`toRDF Yaml 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b6 <http://www.vault/date-updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://www.vault/one> [
		<http://www.vault/0> \\"Two\\" ;
		<http://www.vault/1> [
			<http://www.vault/three> [
				<http://www.vault/0> \\"Other\\" ;
			] ;
		] ;
	] ;
	dot:tag \\"cats\\", \\"dogs\\" .

"
`;

exports[`toRDF code fence 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;
